@@ -1,6 +1,7 @@
 a.out
 *.gz *.bz2 *.tar *.tgz
 FvwmTransFocus
+arpping
 cdiff
 core
 cutcom
